--- a/style.css
+++ b/style.css
@@ -19,6 +19,27 @@ body {
 	margin: 0 auto;
 }
 
+.title {
+	font-size: 2.5rem;
+}
+
+.py-1 {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.px-1 {
+	padding-right: 10px;
+	padding-left: 10px;
+}
+.py-2 {
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+.px-2 {
+	padding-right: 20px;
+	padding-left: 20px;
+}
+
 nav {
 	width: 100%;
 	background-color: #0f1410 !important;
@@ -79,17 +100,18 @@ header ul li a {
 	justify-content: center;
 	align-items: center;
 	padding: 20px;
+	margin: 10px;
 }
 
-.show-case-items .right-side h1 {
+.show-case-items .right-side .show-case-title {
 	color: #fff;
-	font-size: 5rem;
+	font-size: 4.5rem;
 	line-height: 0.95;
 	font-weight: 700;
 }
 
-.show-case-items .right-side p {
-	font-size: 25px;
+.show-case-items .right-side .show-case-content {
+	font-size: 1.5rem;
 	color: #c9cac9;
 	margin-top: 25px;
 	margin-bottom: 25px;
@@ -160,8 +182,8 @@ header ul li a {
 
 .achievements {
 	width: 100%;
-	height: 360px;
 	background-color: #0f1410;
+	padding: 100px;
 }
 
 .achievement-list {
@@ -196,7 +218,6 @@ header ul li a {
 .uniqu {
 	position: relative;
 	width: 100%;
-	height: 500px;
 	padding: 40px;
 }
 
@@ -207,9 +228,12 @@ header ul li a {
 }
 
 .unique-content {
-	display: flex;
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	place-content: center;
 }
 
 .unique-content-item {
@@ -268,9 +292,9 @@ header ul li a {
 	justify-content: space-between;
 }
 
-.review-top .review-top-heading h1 {
+/* .review-top .review-top-heading h1 {
 	font-size: 2.5rem;
-}
+} */
 
 .review-top-heading button {
 	display: flex;
@@ -289,9 +313,12 @@ header ul li a {
 
 .review-cards {
 	margin-top: 50px;
-	display: flex;
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	place-content: center;
 }
 
 .card {
@@ -341,10 +368,6 @@ header ul li a {
 
 .download .download-content .item {
 	margin-right: 50px;
-}
-
-.download .download-content .left h1 {
-	font-size: 2.2rem;
 }
 
 .download .download-content .left p {
@@ -417,7 +440,11 @@ footer .copy {
 	text-align: center;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
+	.title {
+		font-size: 1.5rem;
+	}
+
 	.menu {
 		display: none;
 		width: 100%;
@@ -438,11 +465,89 @@ footer .copy {
 		display: inline;
 	}
 
+	.show-case-title {
+		font-size: 3rem !important;
+	}
+
+	.show-case-items .right-side .show-case-content {
+		font-size: 20px !important;
+	}
+
 	.show-case-items .left-side {
 		display: none;
 	}
 
-	.right-side h1 {
-		font-size: 3rem;
+	.features {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	.achievement-list {
+		grid-template-columns: 1fr;
+		place-items: center;
+		padding: 50px;
+	}
+
+	.achievement-item {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.unique-content {
+		grid-template-columns: 1fr;
+	}
+
+	.review-cards {
+		grid-template-columns: 1fr;
+	}
+
+	.download .download-content {
+		flex-direction: column;
+		margin: 10px;
+	}
+
+	footer .grid {
+		grid-template-columns: repeat(3, 1fr);
+	}
+	.col {
+		margin: 10px;
+	}
+}
+
+@media (min-width: 768px) {
+	.title {
+		font-size: 1.8rem;
+	}
+
+	.show-case-title {
+		font-size: 3.1rem !important;
+	}
+
+	.show-case-items .right-side .show-case-content {
+		font-size: 1.2rem !important;
+	}
+	.unique-content {
+		grid-template-columns: 1fr 1fr;
+	}
+
+	.review-cards {
+		grid-template-columns: 1fr 1fr;
+	}
+}
+@media (min-width: 992px) {
+	.show-case-title {
+		font-size: 4.5rem !important;
+	}
+	.show-case-items .right-side .show-case-content {
+		font-size: 1.5rem !important;
+	}
+
+	.unique-content {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	.review-cards {
+		grid-template-columns: 1fr 1fr 1fr;
 	}
 }
